// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component Localization should render en-id 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.co.id/en/about-us/",
        "footer.aboutLinkText": "About Us",
        "footer.copyright": "Copyright © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.co.id/home/feedback.php?site=id&sub=feedback",
        "footer.feedbackLinkText": "Send Feedback",
        "footer.helpLink": "https://jobstreet.co.id/en/user/",
        "footer.helpLinkText": "Help",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet International",
        "footer.privacyLink": "https://jobstreet.co.id/en/about-us/privacy-policy/",
        "footer.privacyLinkText": "Privacy Policy",
        "footer.profilesLink": "https://jobstreet.co.id/en/companies/778589-jobstreet",
        "footer.profilesLinkText": "Work With Us",
        "footer.safeLink": "https://jobstreet.co.id/en/about-us/safe-job-search-guide/",
        "footer.safeLinkText": "Safe Job Search Guide",
        "footer.siteMapLink": "https://jobstreet.co.id/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.co.id/en/about-us/terms-of-use/",
        "footer.termsLinkText": "Term of Use",
        "header.careerInsightsTitle": "Career Insights",
        "header.careerInsightsUrl": "https://jobstreet.co.id/en/career-insights",
        "header.classifiedJobsTitle": "Classified Jobs",
        "header.classifiedJobsUrl": "https://jobstreet.co.id/en/job-search/classified-ads.php",
        "header.companyProfilesTitle": "Company Profiles",
        "header.companyProfilesUrl": "https://jobstreet.co.id/en/companies/",
        "header.educationTitle": "Education",
        "header.educationUrl": "https://jobstreet.co.id/en/career-insights",
        "header.employerLinkPrefix": "Looking to hire? Check out our ",
        "header.employerSiteTitle": "Employer Site",
        "header.employerSiteUrl": "https://jobstreet.co.id/en/cms/employer",
        "header.freshGradJobsTitle": "Fresh Grad Jobs",
        "header.freshGradJobsUrl": "https://jobstreet.co.id/en/job-search/campus/job-vacancy.php",
        "header.homeTitle": "Home",
        "header.homeUrl": "https://jobstreet.co.id",
        "header.myAccountTitle": "My Account",
        "header.myAccountUrl": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
        "header.myJobStreetTitle": "MyJobStreet",
        "header.myJobStreetUrl": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
        "header.overseasJobsTitle": "Overseas Jobs",
        "header.overseasJobsUrl": "https://jobstreet.co.id/en/job-search/browse/find-overseas-jobs",
        "menu.backToMenu": "Back to Menu",
        "menu.countryAndLanguage": "Country & Language",
        "menu.jobSeekerHeader": "JOB SEEKER",
        "menu.more": "More",
        "menu.moreHeader": "MORE",
        "menu.settingsHeader": "SETTINGS",
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localization should render en-my 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.com.my/en/about-us/",
        "footer.aboutLinkText": "About Us",
        "footer.copyright": "Copyright © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.com.my/home/feedback.php?site=my&sub=feedback",
        "footer.feedbackLinkText": "Send Feedback",
        "footer.helpLink": "https://jobstreet.com.my/en/user/",
        "footer.helpLinkText": "Help",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet International",
        "footer.privacyLink": "https://jobstreet.com.my/en/about-us/privacy-policy/",
        "footer.privacyLinkText": "Privacy Policy",
        "footer.profilesLink": "https://jobstreet.com.my/career/JobStreet.htm",
        "footer.profilesLinkText": "Work With Us",
        "footer.safeLink": "https://jobstreet.com.my/en/about-us/safe-job-search-guide/",
        "footer.safeLinkText": "Safe Job Search Guide",
        "footer.siteMapLink": "https://jobstreet.com.my/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.com.my/en/about-us/terms-of-use/",
        "footer.termsLinkText": "Term of Use",
        "header.careerInsightsTitle": "Career Insights",
        "header.careerInsightsUrl": "https://jobstreet.com.my/en/career-insights",
        "header.classifiedJobsTitle": "Classified Jobs",
        "header.classifiedJobsUrl": "https://jobstreet.com.my/en/job-search/classified-ads.php",
        "header.companyProfilesTitle": "Company Profiles",
        "header.companyProfilesUrl": "https://jobstreet.com.my/en/companies/",
        "header.educationTitle": "Education",
        "header.educationUrl": "https://jobstreet.com.my/en/career-insights",
        "header.employerLinkPrefix": "Looking to hire? Check out our ",
        "header.employerSiteTitle": "Employer Site",
        "header.employerSiteUrl": "https://jobstreet.com.my/en/cms/employer",
        "header.freshGradJobsTitle": "Fresh Grad Jobs",
        "header.freshGradJobsUrl": "https://jobstreet.com.my/en/job-search/campus/job-vacancy.php",
        "header.homeTitle": "Home",
        "header.homeUrl": "https://jobstreet.com.my",
        "header.myAccountTitle": "My Account",
        "header.myAccountUrl": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
        "header.myJobStreetTitle": "MyJobStreet",
        "header.myJobStreetUrl": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
        "header.overseasJobsTitle": "Overseas Jobs",
        "header.overseasJobsUrl": "https://jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
        "menu.backToMenu": "Back to Menu",
        "menu.countryAndLanguage": "Country & Language",
        "menu.jobSeekerHeader": "JOB SEEKER",
        "menu.more": "More",
        "menu.moreHeader": "MORE",
        "menu.settingsHeader": "SETTINGS",
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localization should render en-ph 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.com.ph/en/about-us/",
        "footer.aboutLinkText": "About Us",
        "footer.copyright": "Copyright © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.com.ph/home/feedback.php?site=ph&sub=feedback",
        "footer.feedbackLinkText": "Send Feedback",
        "footer.helpLink": "https://jobstreet.com.ph/en/user/",
        "footer.helpLinkText": "Help",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet International",
        "footer.privacyLink": "https://jobstreet.com.ph/en/about-us/privacy-policy/",
        "footer.privacyLinkText": "Privacy Policy",
        "footer.profilesLink": "https://www.jobstreet.com.ph/en/companies/507168-jobstreet-philippines-inc-ph",
        "footer.profilesLinkText": "Work With Us",
        "footer.safeLink": "https://jobstreet.com.ph/en/about-us/safe-job-search-guide/",
        "footer.safeLinkText": "Safe Job Search Guide",
        "footer.siteMapLink": "https://jobstreet.com.ph/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.com.ph/en/about-us/terms-of-use/",
        "footer.termsLinkText": "Term of Use",
        "header.careerInsightsTitle": "Career Insights",
        "header.careerInsightsUrl": "https://jobstreet.com.ph/en/career-insights",
        "header.classifiedJobsTitle": "Classified Jobs",
        "header.classifiedJobsUrl": "https://jobstreet.com.ph/en/job-search/classified-ads.php",
        "header.companyProfilesTitle": "Company Profiles",
        "header.companyProfilesUrl": "https://jobstreet.com.ph/en/companies/",
        "header.educationTitle": "Education",
        "header.educationUrl": "https://jobstreet.com.ph/en/career-insights",
        "header.employerLinkPrefix": "Looking to hire? Check out our ",
        "header.employerSiteTitle": "Employer Site",
        "header.employerSiteUrl": "https://jobstreet.com.ph/en/cms/employer",
        "header.freshGradJobsTitle": "Fresh Grad Jobs",
        "header.freshGradJobsUrl": "https://jobstreet.com.ph/en/job-search/campus/job-vacancy.php",
        "header.homeTitle": "Home",
        "header.homeUrl": "https://jobstreet.com.ph",
        "header.myAccountTitle": "My Account",
        "header.myAccountUrl": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
        "header.myJobStreetTitle": "MyJobStreet",
        "header.myJobStreetUrl": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
        "header.overseasJobsTitle": "Overseas Jobs",
        "header.overseasJobsUrl": "https://jobstreet.com.ph/en/job-search/browse/find-overseas-jobs",
        "menu.backToMenu": "Back to Menu",
        "menu.countryAndLanguage": "Country & Language",
        "menu.jobSeekerHeader": "JOB SEEKER",
        "menu.more": "More",
        "menu.moreHeader": "MORE",
        "menu.settingsHeader": "SETTINGS",
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localization should render en-sg 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.com.sg/en/about-us/",
        "footer.aboutLinkText": "About Us",
        "footer.copyright": "Copyright © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.com.sg/home/feedback.php?site=sg&sub=feedback",
        "footer.feedbackLinkText": "Send Feedback",
        "footer.helpLink": "https://jobstreet.com.sg/en/user/",
        "footer.helpLinkText": "Help",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet International",
        "footer.privacyLink": "https://jobstreet.com.sg/en/about-us/privacy-policy/",
        "footer.privacyLinkText": "Privacy Policy",
        "footer.profilesLink": "https://jobstreet.com.sg/career/JobStreet.htm",
        "footer.profilesLinkText": "Work With Us",
        "footer.safeLink": "https://jobstreet.com.sg/en/about-us/safe-job-search-guide/",
        "footer.safeLinkText": "Safe Job Search Guide",
        "footer.siteMapLink": "https://jobstreet.com.sg/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.com.sg/en/about-us/terms-of-use/",
        "footer.termsLinkText": "Term of Use",
        "header.careerInsightsTitle": "Career Insights",
        "header.careerInsightsUrl": "https://jobstreet.com.sg/en/career-insights",
        "header.classifiedJobsTitle": "Classified Jobs",
        "header.classifiedJobsUrl": "https://jobstreet.com.sg/en/job-search/classified-ads.php",
        "header.companyProfilesTitle": "Company Profiles",
        "header.companyProfilesUrl": "https://jobstreet.com.sg/en/companies/",
        "header.educationTitle": "Education",
        "header.educationUrl": "https://jobstreet.com.sg/en/career-insights",
        "header.employerLinkPrefix": "Looking to hire? Check out our ",
        "header.employerSiteTitle": "Employer Site",
        "header.employerSiteUrl": "https://jobstreet.com.sg/en/cms/employer",
        "header.freshGradJobsTitle": "Fresh Grad Jobs",
        "header.freshGradJobsUrl": "https://jobstreet.com.sg/en/job-search/campus/job-vacancy.php",
        "header.homeTitle": "Home",
        "header.homeUrl": "https://jobstreet.com.sg",
        "header.myAccountTitle": "My Account",
        "header.myAccountUrl": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
        "header.myJobStreetTitle": "MyJobStreet",
        "header.myJobStreetUrl": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
        "header.overseasJobsTitle": "Overseas Jobs",
        "header.overseasJobsUrl": "https://jobstreet.com.sg/en/job-search/browse/find-overseas-jobs",
        "menu.backToMenu": "Back to Menu",
        "menu.countryAndLanguage": "Country & Language",
        "menu.jobSeekerHeader": "JOB SEEKER",
        "menu.more": "More",
        "menu.moreHeader": "MORE",
        "menu.settingsHeader": "SETTINGS",
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localization should render en-vn 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.vn/en/about-us/",
        "footer.aboutLinkText": "About Us",
        "footer.copyright": "Copyright © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.vn/home/feedback.php?site=vn&sub=feedback",
        "footer.feedbackLinkText": "Send Feedback",
        "footer.helpLink": "https://jobstreet.vn/en/user/",
        "footer.helpLinkText": "Help",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet International",
        "footer.privacyLink": "https://jobstreet.vn/en/about-us/privacy-policy/",
        "footer.privacyLinkText": "Privacy Policy",
        "footer.profilesLink": "https://jobstreet.vn/en/companies/762582-jobstreet-company-limited-vn",
        "footer.profilesLinkText": "Work With Us",
        "footer.safeLink": "https://jobstreet.vn/en/about-us/safe-job-search-guide/",
        "footer.safeLinkText": "Safe Job Search Guide",
        "footer.siteMapLink": "https://jobstreet.vn/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.vn/en/about-us/terms-of-use/",
        "footer.termsLinkText": "Term of Use",
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localization should render id-id 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.co.id/id/about-us/",
        "footer.aboutLinkText": "Tentang Kami",
        "footer.copyright": "Hak Cipta © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.co.id/home/feedback.php?site=id&sub=feedback",
        "footer.feedbackLinkText": "Kirim Saran",
        "footer.helpLink": "https://jobstreet.co.id/id/user/",
        "footer.helpLinkText": "Bantuan",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet Internasional",
        "footer.privacyLink": "https://jobstreet.co.id/id/about-us/kebijakan-privasi/",
        "footer.privacyLinkText": "Kebijakan Kerahasiaan",
        "footer.profilesLink": "https://jobstreet.co.id/en/companies/778589-jobstreet",
        "footer.profilesLinkText": "Berkarier bersama Kami",
        "footer.safeLink": "https://jobstreet.co.id/id/about-us/panduan-dan-tips-mencari-kerja-online-secara-aman/",
        "footer.safeLinkText": "Panduan Mencari Kerja Secara Aman",
        "footer.siteMapLink": "https://jobstreet.co.id/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.co.id/id/about-us/ketentuan-penggunaan/",
        "footer.termsLinkText": "Ketentuan Penggunaan",
        "header.careerInsightsTitle": "Career Insights",
        "header.careerInsightsUrl": "https://jobstreet.co.id/id/career-insights",
        "header.classifiedJobsTitle": "Classified Jobs",
        "header.classifiedJobsUrl": "https://jobstreet.co.id/id/job-search/classified-ads.php",
        "header.companyProfilesTitle": "Company Profiles",
        "header.companyProfilesUrl": "https://jobstreet.co.id/id/companies/",
        "header.educationTitle": "Education",
        "header.educationUrl": "https://jobstreet.co.id/id/career-insights",
        "header.employerLinkPrefix": "Looking to hire? Check out our ",
        "header.employerSiteTitle": "Employer Site",
        "header.employerSiteUrl": "https://jobstreet.co.id/id/cms/employer",
        "header.freshGradJobsTitle": "Fresh Grad Jobs",
        "header.freshGradJobsUrl": "https://jobstreet.co.id/id/job-search/campus/job-vacancy.php",
        "header.homeTitle": "Home",
        "header.homeUrl": "https://jobstreet.co.id",
        "header.myAccountTitle": "My Account",
        "header.myAccountUrl": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
        "header.myJobStreetTitle": "MyJobStreet",
        "header.myJobStreetUrl": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
        "header.overseasJobsTitle": "Overseas Jobs",
        "header.overseasJobsUrl": "https://jobstreet.co.id/id/job-search/browse/find-overseas-jobs",
        "menu.backToMenu": "Back to Menu",
        "menu.countryAndLanguage": "Country & Language",
        "menu.jobSeekerHeader": "JOB SEEKER",
        "menu.more": "More",
        "menu.moreHeader": "MORE",
        "menu.settingsHeader": "SETTINGS",
      }
    }
  />
  <p
    className="copyright"
  >
    Hak Cipta © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localization should render vi-vn 1`] = `
<footer
  className="container"
>
  <FooterLinks
    messages={
      Object {
        "footer.aboutLink": "https://jobstreet.vn/vi/about-us/",
        "footer.aboutLinkText": "Về JobStreet",
        "footer.copyright": "Copyright © {year} JobStreet.com",
        "footer.feedbackLink": "https://myjobstreet.jobstreet.vn/home/feedback.php?site=vn&sub=feedback",
        "footer.feedbackLinkText": "Gửi Phản Hồi",
        "footer.helpLink": "https://jobstreet.vn/vi/user/",
        "footer.helpLinkText": "Trợ Giúp",
        "footer.link": "https://www.jobstreet.com",
        "footer.linkText": "JobStreet Quốc Tế",
        "footer.privacyLink": "https://jobstreet.vn/vi/about-us/chinh-sach-bao-mat/",
        "footer.privacyLinkText": "Chính Sách Bảo Mật",
        "footer.profilesLink": "https://jobstreet.vn/vi/companies/762582-jobstreet-company-limited-vn",
        "footer.profilesLinkText": "Cơ Hội Nghề Nghiệp",
        "footer.safeLink": "https://jobstreet.vn/vi/about-us/huong-dan-va-bi-quyet-tim-viec-truc-tuyen-an-toan/",
        "footer.safeLinkText": "Mẹo Tìm Việc An Toàn",
        "footer.siteMapLink": "https://jobstreet.vn/sitemap.htm",
        "footer.siteMapLinkText": "Site Map",
        "footer.termsLink": "https://jobstreet.vn/vi/about-us/dieu-khoan-su-dung/",
        "footer.termsLinkText": "Điều Khoản Sử Dụng",
        "header.careerInsightsTitle": "Career Insights",
        "header.careerInsightsUrl": "https://jobstreet.vn/vi/career-insights",
        "header.classifiedJobsTitle": "Classified Jobs",
        "header.classifiedJobsUrl": "https://jobstreet.vn/vi/job-search/classified-ads.php",
        "header.companyProfilesTitle": "Company Profiles",
        "header.companyProfilesUrl": "https://jobstreet.vn/vi/companies/",
        "header.educationTitle": "Education",
        "header.educationUrl": "https://jobstreet.vn/vi/career-insights",
        "header.employerLinkPrefix": "Looking to hire? Check out our ",
        "header.employerSiteTitle": "Employer Site",
        "header.employerSiteUrl": "https://jobstreet.vn/vi/cms/employer",
        "header.freshGradJobsTitle": "Fresh Grad Jobs",
        "header.freshGradJobsUrl": "https://jobstreet.vn/vi/job-search/campus/job-vacancy.php",
        "header.homeTitle": "Home",
        "header.homeUrl": "https://jobstreet.vn",
        "header.myAccountTitle": "My Account",
        "header.myAccountUrl": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
        "header.myJobStreetTitle": "MyJobStreet",
        "header.myJobStreetUrl": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
        "header.overseasJobsTitle": "Overseas Jobs",
        "header.overseasJobsUrl": "https://jobstreet.vn/vi/job-search/browse/find-overseas-jobs",
        "menu.backToMenu": "Back to Menu",
        "menu.countryAndLanguage": "Country & Language",
        "menu.jobSeekerHeader": "JOB SEEKER",
        "menu.more": "More",
        "menu.moreHeader": "MORE",
        "menu.settingsHeader": "SETTINGS",
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;
